--- a/wp-content/themes/solar/gulp/scss/components/_map.scss
+++ b/wp-content/themes/solar/gulp/scss/components/_map.scss
@@ -1,4 +1,7 @@
 .map {
+  background: #f2f2f2;
+  padding: 100px 0;
+
   &__box {
     background: $primary;
     color: white;
@@ -17,7 +20,7 @@
       display: inline-flex;
       justify-content: space-around;
 
-      a{
+      a {
         text-decoration: none;
       }
     }
