--- a/wp-content/themes/solar/gulp/scss/components/_clients.scss
+++ b/wp-content/themes/solar/gulp/scss/components/_clients.scss
@@ -1,14 +1,24 @@
 .clients {
   background: #f2f2f2;
+  margin: 2.5rem 0;
+  padding: 2.5rem 0;
 
-  ul {
-    li {
-      display: inline-flex;
-      justify-content: space-around;
+  &__title {
+    align-items: center;
+    display: flex;
+  }
 
-      img {
-        mix-blend-mode: multiply;
-      }
-    }
+  &__brands {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  &__item {
+    display: inline-flex;
+    justify-content: space-around;
+  }
+
+  &__images {
+    mix-blend-mode: multiply;
   }
 }
