--- a/wp-content/themes/solar/gulp/scss/components/_custom.scss
+++ b/wp-content/themes/solar/gulp/scss/components/_custom.scss
@@ -2,6 +2,60 @@
 $font: Montserrat, sans-serif;
 
 // Colors
-$primary: #DB611D;
-$secondary: #662A10;
-$default: #60666E;
+$primary: #db611d;
+$secondary: #662a10;
+$default: #60666e;
+
+body {
+  color: $secondary;
+  font-family: $font;
+  font-size: 1rem;
+  line-height: 1.3;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+}
+
+h2 {
+  color: $primary;
+  font-size: 3rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+}
+
+ul {
+  list-style: none;
+  padding-inline-start: 0;
+}
+
+.btn {
+  color: white;
+  background: $primary;
+  font-weight: 700;
+  padding: 1.25rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all ease-in-out 0.25s;
+
+  &:hover {
+    background: $secondary;
+    color: white;
+  }
+}
