--- a/wp-content/themes/solar/gulp/scss/components/_services.scss
+++ b/wp-content/themes/solar/gulp/scss/components/_services.scss
@@ -1,4 +1,5 @@
 .services {
+  padding: 2.5rem 0;
   text-align: center;
 
   .row {
@@ -8,13 +9,11 @@
 
   &__title {
     color: $primary;
+    margin-bottom: 2rem;
   }
 
-  &__box {
-    img {
-      height: auto;
-      max-width: 100%;
-      width: 100%;
-    }
+  &__images {
+    height: auto;
+    max-width: 100%;
   }
 }
