--- a/wp-content/themes/solar/gulp/scss/style.scss
+++ b/wp-content/themes/solar/gulp/scss/style.scss
@@ -1,3 +1,7 @@
+// Bootstrap
+@import "./node_modules/bootstrap/scss/bootstrap";
+
+// Custom
 @import "components/custom";
 @import "components/services";
 @import "components/clients";
