--- a/wp-content/themes/solar/gulp/scss/components/_map.scss
+++ b/wp-content/themes/solar/gulp/scss/components/_map.scss
@@ -1,15 +1,40 @@
 .map {
   background: #f2f2f2;
-  padding: 100px 0;
+
+  iframe {
+    height: 500px;
+    width: 100%;
+  }
+
+  .row {
+    position: relative;
+  }
 
   &__box {
     background: $primary;
     color: white;
     padding: 2rem;
+    position: absolute;
+    left: 0;
+    top: -420px;
+
+    h3 {
+      &:nth-child(2) {
+        margin-top: 2rem;
+      }
+    }
 
     a {
       color: white;
+      margin-right: 1rem;
       text-decoration: underline;
+
+      svg {
+        fill: white;
+        height: 1.5rem;
+        margin-right: 0.25rem;
+        width: 1.5rem;
+      }
     }
   }
 
